--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "e-commers app",
   "main": "server.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "nodemon -r esm server.js"
   },
   "repository": {
     "type": "git",
