add : user signup

--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
     "slug": "^5.0.1",
-    "string-strip-html": "^8.3.0"
+    "string-strip-html": "^8.3.0",
+    "uid": "^2.0.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
