add : category router

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
 DB_URL=mongodb://localhost:27017/bazarshop
 APP_NAME = bajarshop
+AUTH_TIMEOUT = '1d'
+AUTH_SECRET=awvDo2GKLsvMCwNRxb5BUshteXU8U97NCyvQDsGKs
