--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
+    "multer": "^1.4.2",
     "slug": "^5.0.1",
     "string-strip-html": "^8.3.0",
     "uid": "^2.0.0"
